[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Zoey Mertes <zmertes@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
nom = "6.0.1"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

[profile.release]
panic = 'abort'
